# opencicd-fork

./: CODEOWNERS  CODE_OF_CONDUCT.md  NOTICE  pyproject.toml  readme.fork.md  readme.md
action/: action.yml
docs/: action-files.md  running.md
openspec/changes/add-docker-user-option/: proposal.md  tasks.md
openspec/changes/archive/2026-06-17-add-docker-user-option/: design.md
openspec/changes/archive/2026-06-17-add-docker-user-option/specs/docker-runtime-user/: spec.md
openspec/changes/archive/2026-06-17-add-tmp-home-option/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-add-tmp-home-option/specs/docker-runtime-tmp-home/: spec.md
openspec/specs/docker-runtime-tmp-home/: spec.md
openspec/specs/docker-runtime-user/: spec.md
scripts/: add_license.sh
src/docker/: Dockerfile  readme.md
src/opencicd/: __init__.py  __main__.py  action_runner.py  constants.py  output.py
src/opencicd/model/: __init__.py  action.py  job.py  project.py  serialization.py
test/.opencicd/: context-test.dockerfile  example.cicdignore  publish-test.dockerfile  publish-test.sh  publish.test.action.yaml  publish.test2.action.yaml  publish.test3.action.yaml  publish.test4.action.yaml  testpublishversion.test6.action.yaml
test/src/docker/: Dockerfile
tests/unit/: test_cli_docker_user.py
