[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "opencicd.__version__"}

[project]
name = "jsocfork"
dynamic = ["version"]
authors = [
    { name = "OpenCICD Contributors" },
]
description = "Orchestrator for project cicd actions"
readme = "readme.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "PyYAML ~= 6.0",
    "typing_extensions ~= 4.12.2"
]

[project.urls]
"Homepage" = "https://github.com/Comcast/OpenCICD"
"Bug Tracker" = "https://github.com/Comcast/OpenCICD/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.0",
    "pytest-xdist>=3.5.0",
]

[project.scripts]
opencicd = "opencicd.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib -m unit -n auto --cov=opencicd --cov-report=term-missing:skip-covered --cov-report=xml"
pythonpath = ["src"]
markers = [
    "unit: marks tests as unit (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]